; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-helpers.c_ecma_builtin_helper_string_index_normalize.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-helpers.c_ecma_builtin_helper_string_index_normalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ecma_builtin_helper_string_index_normalize(i32 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  store i64 0, i64* %7, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @ecma_number_is_nan(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %11
  %15 = load i64, i64* %5, align 8
  store i64 %15, i64* %7, align 8
  br label %16

16:                                               ; preds = %14, %11
  br label %38

17:                                               ; preds = %3
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @ecma_number_is_negative(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %37, label %21

21:                                               ; preds = %17
  %22 = load i32, i32* %4, align 4
  %23 = call i64 @ecma_number_is_infinity(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i64, i64* %5, align 8
  store i64 %26, i64* %7, align 8
  br label %36

27:                                               ; preds = %21
  %28 = load i32, i32* %4, align 4
  %29 = call i64 @ecma_number_to_uint32(i32 %28)
  store i64 %29, i64* %7, align 8
  %30 = load i64, i64* %7, align 8
  %31 = load i64, i64* %5, align 8
  %32 = icmp sgt i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %27
  %34 = load i64, i64* %5, align 8
  store i64 %34, i64* %7, align 8
  br label %35

35:                                               ; preds = %33, %27
  br label %36

36:                                               ; preds = %35, %25
  br label %37

37:                                               ; preds = %36, %17
  br label %38

38:                                               ; preds = %37, %16
  %39 = load i64, i64* %7, align 8
  ret i64 %39
}

declare dso_local i64 @ecma_number_is_nan(i32) #1

declare dso_local i32 @ecma_number_is_negative(i32) #1

declare dso_local i64 @ecma_number_is_infinity(i32) #1

declare dso_local i64 @ecma_number_to_uint32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
